#
# This file is protected by Copyright. Please refer to the COPYRIGHT file 
# distributed with this source distribution.
# 
# This file is part of GNUHAWK.
# 
# GNUHAWK is free software: you can redistribute it and/or modify is under the 
# terms of the GNU General Public License as published by the Free Software 
# Foundation, either version 3 of the License, or (at your option) any later 
# version.
# 
# GNUHAWK is distributed in the hope that it will be useful, but WITHOUT ANY 
# WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR 
# A PARTICULAR PURPOSE.  See the GNU General Public License for more details.

# You should have received a copy of the GNU General Public License along with 
# this program.  If not, see http://www.gnu.org/licenses/.
#
 
# Manually set the GNURadio namespace here 
GR_NAMESPACE = gnuhawk/digital

namespacedir = $(prefix)/dom/components/$(GR_NAMESPACE)/fll_band_edge_cc_4o
versiondir = $(namespacedir)/$(PACKAGE_VERSION)

ossieName = fll_band_edge_cc_4o
bindir = $(versiondir)/cpp
bin_PROGRAMS = fll_band_edge_cc_4o

xmldir = $(versiondir)
dist_xml_DATA = ../fll_band_edge_cc_4o.prf.xml ../fll_band_edge_cc_4o.scd.xml ../fll_band_edge_cc_4o.spd.xml

# Create a "current" link to the version just installed
install-exec-hook:
	ln -fns $(versiondir) $(DESTDIR)$(namespacedir)/current

distclean-local:
	rm -f config.*
	rm -rf autom4te.cache
	rm -f acinclude.m4
	rm -f aclocal.m4
	rm -f configure
	rm -f depcomp
	rm -f install-sh
	rm -f ltmain.sh
	rm -f Makefile.in
	rm -f missing
	rm -rf .deps

# Sources, libraries and library directories are auto-included from a file
# generated by the REDHAWK IDE. You can remove/modify the following lines if
# you wish to manually control these options.
include $(srcdir)/Makefile.am.ide
fll_band_edge_cc_4o_SOURCES = $(redhawk_SOURCES_auto)
fll_band_edge_cc_4o_CXXFLAGS = -Wall $(PROJECTDEPS_CFLAGS) $(BOOST_CPPFLAGS) $(INTERFACEDEPS_CFLAGS) $(redhawk_INCLUDES_auto)
fll_band_edge_cc_4o_LDADD = $(PROJECTDEPS_LIBS) $(BOOST_LDFLAGS) $(BOOST_THREAD_LIB) $(INTERFACEDEPS_LIBS) $(redhawk_LDADD_auto)
fll_band_edge_cc_4o_LDFLAGS = -Wall $(redhawk_LDFLAGS_auto)
